--- a/plugins/theming/public/themes/hackerman.css
+++ b/plugins/theming/public/themes/hackerman.css
@@ -1,12 +1,3 @@
-.ace_scroller{
-  position: absolute;
-  right: 0 !important;
-}
-
-.ace_editor ::-webkit-scrollbar{
-  opacity: .8;
-}
-
 body{
   margin-bottom: 20px;
   color: #2c2;
